# PxPore

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  api.py  atoms.py  cli.py  config.py  core.py  geometry.py  octree.py  pores.py  pyproject.toml  requirements.txt  stats.py  warmup.py
sharing/: UFF.atoms
src/PxPore/: atoms.py  cli.py  config.py  connectivity.py  connectivity_multicore.py  distance.py  io_cube.py  io_input.py  octree_conectivity.py  pores.py  surface.py  warmup.py
tests/data/: README.md  single_H.gro
tests/data/benchmark_structures/: HKUST1.gro  IRMOF1.gro  ZIF8AP.gro
tests/data/synthetic_systems/: H512.gro  case1_overlap.gro  case2_throat.gro  case3_hollow_cube.gro
tests/data/tmc_dap/: TMC-DAP_prod.gro
