[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PxPore"
version = "1.0.0"
description = "Grid-based pore and free-volume analysis for molecular structures."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "llvmlite==0.46.0",
    "numba==0.63.1",
    "numpy==2.2.6",
    "pandas>=1.3.0",
    "psutil==7.2.2",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
]

[project.scripts]
pxpore = "PxPore.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
PxPore = ["data/*.atoms"]
